# Step-training-system

./: .gitignore  AGENTS.md  CLAUDE.md  README_前端.md  README_后端.md  requirements.txt  一键启动.bat  审查情况.md  当前每个人的实际任务.md  数据管理页分析.md  项目压缩前须知.md  项目必读readme.md
docs/: README-任务分发说明.md  defense-qa-preparation.md  技术路线与产品功能汇报.md  数据库架构与开发约定.md  数据管理页分析.md  服务器部署方案.md  答辩技术问题准备.md
footwork_kinematics_universal2/: README.md  requirements.txt  run_analysis.py  user_params.py
frontend/: README.md  index.html  package-lock.json  package.json  vite.config.js
pose3d_project_2.0_fixed/: README.md  pyproject.toml  requirements.txt  resume_pipeline.py  数据处理流程说明.md
pose3d_project_2.0_fixed/3D/: pose3d_pyvista_viewer.py
pose3d_project_2.0_fixed/data/session_001/: stereo_params.json
pose3d_project_2.0_fixed/pose3d_pkg/: user_params.py
pose3d_project_2.0_fixed/pose3d_pkg/calibration/: ground_points.py  stereo_calibrate.py  yellow_control_points.py
pose3d_project_2.0_fixed/pose3d_pkg/cli/: run_pipeline.py
pose3d_project_2.0_fixed/pose3d_pkg/detection/: __init__.py  common.py  pose2d_mediapipe.py
pose3d_project_2.0_fixed/pose3d_pkg/io/: save_csv.py  video_filter.py  video_reader.py
pose3d_project_2.0_fixed/pose3d_pkg/postprocess/: __init__.py  columns.py  filtering.py  gap_fill.py  outlier.py  pipeline.py
pose3d_project_2.0_fixed/pose3d_pkg/triangulation/: projection.py  temporal_filter.py  triangulate_pose.py
pose3d_project_2.0_fixed/pose3d_pkg/viz/: animate_pose3d.py  paraview_export.py
site/: home.html  loading.html  product.html  report.html  settings.html  (+1 more)
(+214 files in other folders)
